[package]
name = "s3torchconnectorclient"
version = "1.5.0"
edition = "2021"
publish = false
license = "BSD-3-Clause"
build = "rust/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "_mountpoint_s3_client"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[build-dependencies]
built = "0.7"

[dependencies]
pyo3 = "0.29.0"
futures = "0.3.28"
mountpoint-s3-client = { version = "0.14.1", features = ["mock"] }
mountpoint-s3-crt-sys = { version = "0.13.0" }
log = "0.4.20"
tracing = { version = "0.1.40", default-features = false, features = ["std", "log"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"]}
nix = { version = "0.27.1", features = ["process"] }
rusty-fork = "0.3.0"
tracing-appender = "0.2.3"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

# RELEASE-BRANCH ONLY (do not merge to requester-pays-support / upstream).
# Vendored mountpoint-s3-crt-sys 0.13.1 with the aws-c-s3 Requester Pays copy fix
# applied to crt/aws-c-s3/source/s3_request_messages.c (forwards x-amz-request-payer
# onto the source-object HEAD the CopyObject meta-request issues). Version must stay
# 0.13.1 to match the resolved graph, or cargo silently ignores the patch.
[patch.crates-io]
mountpoint-s3-crt-sys = { path = "../vendor/mountpoint-s3-crt-sys-0.13.1" }
